# omop-emb

./: .env.example  .gitignore  .releaserc.json  404.html  CHANGELOG.md  Dockerfile  PLAN-FOR-KG-EMBEDDING.md  README.md  REFACTOR_PLAN.md  docker-compose.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  not_working.yml
.github/workflows/: docs.yml  release.yml
docs/: index.md
docs/getting-started/: configuration.md
docs/usage/: asymmetric-embeddings.md  backend-selection.md  cli.md  configuration.md  installation.md  interface-guide.md
getting-started/configuration/: index.html
scripts/: system_information.py
search/: search_index.json
src/omop_emb/: __init__.py  accessor.py  cli.py  config.py  embedding_client.py  interface.py  queries.py  registry.py  service.py
src/omop_emb/backends/: __init__.py  base.py  base_backend.py  base_index_manager.py  config.py  database_backend.py  db_utils.py  embedding_table.py  embedding_utils.py  errors.py  factory.py  faiss.py  index_config.py  postgres.py  registry.py
src/omop_emb/backends/faiss/: __init__.py  backend_faiss.py  faiss_backend.py  faiss_db_backend.py  faiss_index_manager.py  faiss_sql.py  index_config.py  index_manager.py  storage_manager.py
src/omop_emb/backends/index_utils/: __init__.py  base_index_manager.py
src/omop_emb/backends/pgvector/: __init__.py  pg_backend.py  pg_index_manager.py  pg_sql.py  pgvector_backend.py  pgvector_index_manager.py  pgvector_sql.py
src/omop_emb/backends/postgres/: backend_pgvector.py
src/omop_emb/backends/sqlitevec/: __init__.py  sqlitevec_backend.py  sqlitevec_sql.py
src/omop_emb/cdm/: embeddings.py
src/omop_emb/cli/: cli_app.py  cli_diagnostics.py  cli_embeddings.py  cli_legacy.py  cli_maintenance.py  utils.py
src/omop_emb/embeddings/: __init__.py  embedding_client.py  embedding_providers.py
src/omop_emb/model_registry/: __init__.py  model_registry_cdm.py  model_registry_manager.py  model_registry_orm.py  model_registry_types.py
src/omop_emb/storage/: __init__.py  base.py  base_index_manager.py  embedding_bundle.py  index_config.py
src/omop_emb/storage/faiss/: __init__.py  faiss_cache.py  faiss_index_store.py
src/omop_emb/storage/faiss_cache/: __init__.py  faiss_cache.py  faiss_export.py
src/omop_emb/storage/postgres/: __init__.py  pg_backend.py  pg_index_manager.py  pg_registry.py  pg_sql.py
src/omop_emb/utils/: cdm.py  embedding_utils.py  errors.py  factory.py
tests/: README.md  __init__.py  conftest.py  shared_backend_tests.py  test_cli.py  test_cli_pgvector_snapshot.py  test_config.py  test_dummy.py  test_embedding_bundle.py  test_embedding_client.py  test_faiss.py  test_faiss_cache.py  test_faiss_hnsw.py  test_faiss_index_manager.py  test_faiss_storage_manager.py  test_fixtures.py  test_index_config.py  test_interface.py  test_interface_validation.py  test_ollama_provider_api.py  test_optional_deps.py  test_pgvector.py  test_pgvector_hnsw.py  test_pgvector_index_manager.py  test_providers.py  test_registry.py  test_sqlitevec.py
usage/asymmetric-embeddings/: index.html
usage/backend-selection/: index.html
usage/cli/: index.html
usage/configuration/: index.html
usage/installation/: index.html
usage/interface-guide/: index.html
