[project]
name = "omop-emb"
version = "0.1.0"
description = "Embedding extension to omop-graph"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Nico Loesch", email = "n.loesch@unsw.edu.au" }
]
license = "Apache-2.0"

keywords = [
  "OMOP",
  "OHDSI",
  "clinical-data",
  "health-informatics",
  "sqlalchemy",
  "knowledge-graph",
  "LLM-grounding",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
    "omop-alchemy>=0.5.7",
    "orm-loader>=0.3.15",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.45",
    "typing-extensions>=4.15.0",
    "omop-llm",
    "pgvector"
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "rich>=14.2.0",
    "ruff>=0.14.10",
    "omop-graph[emb]"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omop_emb"]

[project.scripts]
omop-emb = "omop_emb.cli:app"

[tool.uv.sources]
omop-llm = { git = "https://github.com/AustralianCancerDataNetwork/omop-llm.git", branch = "main" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*", "Check*"]
python_functions = ["test_*"]
addopts = [
    "-rf", 
    "-rx", 
    "--disable-pytest-warnings"
]
# Live logging (CLI) configuration
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s | %(name)s | %(levelname)s | %(message)s"
log_level = "INFO"
log_format = "%(asctime)s | %(name)s | %(levelname)s | %(message)s"