[project]
name = "omop-emb"
version = "0.4.0"
description = "Embedding extension to omop-graph"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Nico Loesch", email = "n.loesch@unsw.edu.au" }
]
license = "Apache-2.0"

keywords = [
  "OMOP",
  "OHDSI",
  "clinical-data",
  "health-informatics",
  "sqlalchemy",
  "knowledge-graph",
  "LLM-grounding",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.26",
    "omop-alchemy>=0.5.7",
    "orm-loader>=0.3.15",
    "sqlalchemy>=2.0.45",
    "typing-extensions>=4.15.0",
    "psycopg2-binary>=2.9.11",
    "openai",
    "numpy",
    "requests",
    "typer"
]

[project.optional-dependencies]
pgvector = [
    "pgvector",
]
faiss = [
    "faiss-cpu>=1.8.0",
    "h5py",
]
all = [
    "pgvector",
    "faiss-cpu>=1.8.0",
    "h5py"
]

[dependency-groups]
dev = [
    "faiss-cpu>=1.8.0",
    "pgvector",
    "psycopg2-binary>=2.9.11",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "rich>=14.2.0",
    "ruff>=0.14.10",
    "h5py",
    "openai",
    "numpy",
    "requests",
    "typer"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omop_emb"]

[project.scripts]
omop-emb = "omop_emb.cli:app"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "faiss: FAISS backend tests",
  "pgvector: pgvector backend tests",
]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore:datetime\\.datetime\\.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning:dateutil.tz.tz",
    "ignore:builtin type .* has no __module__ attribute:DeprecationWarning",
]