[project]
name = "omop-emb"
version = "0.5.0"
description = "Embedding extension for OMOP CDM. Utilises sqlite-vec by default, optional pgvector and FAISS backends"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Nico Loesch", email = "n.loesch@unsw.edu.au" }
]
license = "Apache-2.0"

keywords = [
  "OMOP",
  "OHDSI",
  "clinical-data",
  "health-informatics",
  "sqlalchemy",
  "knowledge-graph",
  "LLM-grounding",
  "pgvector",
  "embeddings",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.26",
    "omop-alchemy>=0.5.7",
    "orm-loader>=0.3.15",
    "sqlalchemy>=2.0.45",
    "typing-extensions>=4.15.0",
    "sqlite-vec>=0.1.9",
    "openai",
    "requests",
    "typer",
    "tqdm"
]

[project.optional-dependencies]
pgvector = [
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.3.0",
]
faiss = [
    "faiss-cpu>=1.8.0",
]

[dependency-groups]
dev = [
    "sqlite-vec>=0.1.9",
    "faiss-cpu>=1.8.0",
    "pgvector>=0.3.0",
    "psycopg[binary]>=3.1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "rich>=14.2.0",
    "ruff>=0.14.10",
    "h5py",
    "openai",
    "numpy",
    "requests",
    "typer",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omop_emb"]

[project.scripts]
omop-emb = "omop_emb.cli.cli_app:app"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "sqlitevec: sqlite-vec backend tests",
  "pgvector: pgvector backend tests",
  "faiss: FAISS sidecar tests",
]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore:datetime\\.datetime\\.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning:dateutil.tz.tz",
    "ignore:builtin type .* has no __module__ attribute:DeprecationWarning",
]
